kubernetes/configmaps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reservation-system
